chore: mostly tailored this blog to be 'my blog'; :)

--- a/data/blog/github-markdown-guide.mdx
+++ b/data/blog/github-markdown-guide.mdx
@@ -1,12 +1,14 @@
 ---
 title: 'Markdown Guide'
-date: '2019-10-11'
+date: '2025-03-29'
 tags: ['github', 'guide']
 draft: false
 summary: 'Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown.'
 ---
 
 # Introduction
+
+_This article is kept from the original template repository. I'll continue using it as a reference._
 
 Markdown and Mdx parsing is supported via `unified`, and other remark and rehype packages. `next-mdx-remote` allows us to parse `.mdx` and `.md` files in a more flexible manner without touching webpack.
 
